--- a/project7/index.html
+++ b/project7/index.html
@@ -6,19 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="../css/index.css">
-  <script>
-    let flage = false
-    let meau = document.getElementById('boxbox')
-  
-    function block() {
-      flage = !flage
-      if (flage) {
-        meau.style.display = 'block'
-      } else {
-        meau.style.display = 'none'
-      }
-    }
-  </script>
 </head>
 
 <body>
@@ -139,11 +126,11 @@
       <form action="https://formspree.io/f/xbjvzzlb" method="post">
         <div>
           <label for="email">email:</label>
-          <input type="text" class="email" id="email" name="Email">
+          <input type="text" class="email" name="Email">
         </div>
         <div class="form2">
           <label for="favorite">select type：</label><br>
-          <select class="favorite" id="favorite" name="favorite">
+          <select class="favorite" name="favorite">
             <option value="Beijing Opera">Beijing Opera</option>
             <option value="Henan Opera">Henan Opera</option>
             <option value="Huangmei Opera">Huangmei Opera</option>
@@ -156,5 +143,18 @@
     </div>
   </footer>
 </body>
+<script>
+  let flage = false
+  let meau = document.getElementById('boxbox')
+
+  function block() {
+    flage = !flage
+    if (flage) {
+      meau.style.display = 'block'
+    } else {
+      meau.style.display = 'none'
+    }
+  }
+</script>
 
 </html>
