completed final project

--- a/project7/index.html
+++ b/project7/index.html
@@ -126,11 +126,11 @@
       <form action="https://formspree.io/f/xbjvzzlb" method="post">
         <div>
           <label for="email">email:</label>
-          <input type="text" class="email" name="Email">
+          <input type="text" class="email" id="email" name="Email">
         </div>
         <div class="form2">
-          <label for="favorite">select type：</label><br>
-          <select class="favorite" name="favorite">
+          <label for="favorite">select type: </label><br>
+          <select class="favorite" id="favorite" name="favorite">
             <option value="Beijing Opera">Beijing Opera</option>
             <option value="Henan Opera">Henan Opera</option>
             <option value="Huangmei Opera">Huangmei Opera</option>
