--- a/project7/performers.html
+++ b/project7/performers.html
@@ -3,14 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, 
-  user-scalable=no,
-  initial-scale=1.0,
-  maximum-scale=1.0,
-  minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Famous Chinese Opera Performers</title>
   <link rel="stylesheet" href="../css/performers.css">
-
 </head>
 
 <body>
@@ -334,11 +329,11 @@
       <form action="https://formspree.io/f/xbjvzzlb" method="post">
        <div>
         <label for="email">email:</label>
-        <input type="text" class="email" name="Email">
-       </div>
+        <input type="text" class="email" id="email" name="Email">
+      </div>
         <div>
           <label for="favorite">select type：</label><br>
-          <select class="favorite" name="favorite">
+          <select class="favorite" id="favorite" name="favorite">
             <option value="Beijing Opera">Beijing Opera</option>
             <option value="Henan Opera">Henan Opera</option>
             <option value="Huangmei Opera">Huangmei Opera</option>
@@ -364,5 +359,4 @@
     }
   }
 </script>
-
 </html>
